--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>final project Hotel</title>
+    <title>hotel home</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -15,9 +15,9 @@
     <div class="page-header__inner">
         <nav class="page-header__nav c-menu page_style">
 
-            <a class="page-header__logo c-link"><img class="logo__img image-fluid" src="img/logo_new.png"
-                                                     alt="royal hotel"
-                                                     width="242" height="66"></a>
+            <a class="page-header__logo c-link">
+                <img class="logo__img image-fluid" src="img/logo_new.png" alt="royal hotel" width="242" height="66">
+            </a>
             <input type="checkbox" id="page-burger" class="c-menu__burger-toggle">
             <label for="page-burger" class="c-menu__burger-btn"></label>
             <ul class="menu__list">
@@ -31,7 +31,7 @@
                 <li class="c-menu__item"><a class="c-link" href="#">Booking</a></li>
                 <li class="c-menu__item"><a class="c-link" href="#">News</a></li>
                 <li class="c-menu__item"><a class="c-link" href="gallery.html">Gallery</a></li>
-                <li class="c-menu__item"><a class="c-link" href="#">Contact</a></li>
+                <li class="c-menu__item"><a class="c-link" href="contacts.html">Contacts</a></li>
             </ul>
         </nav>
     </div>
