updated contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -96,5 +96,6 @@
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS1SSQDXm2-2ozSKG2dqFLKZh_T-_d7tM&callback=initMap">
 </script>
+<script src="js/p-contacts.js"></script>
 </body>
 </html>
