updated css class promo

--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
     </div>
 </header>
 <main class="page__inner">
-    <div class="promo contacts">
+    <div class="promo">
         <h1>Contacts</h1>
     </div>
     <div id="map"></div>
