updated css class promo

--- a/contacts.html
+++ b/contacts.html
@@ -41,6 +41,17 @@
         <h1>Contacts</h1>
     </div>
     <div id="map"></div>
+
+    <section class="contacts container">
+        <div class="col-left">
+            <h2>Get in touch with us now!</h2>
+            <span>Feel free to contact us and get more information</span>
+            <form action="#" method="post">
+
+            </form>
+        </div>
+        <div class="col-right"></div>
+    </section>
 </main>
 <footer class="page-footer">
     <div class="page-footer__inner container">
