fixed styles for booking and contacts

--- a/gallery.html
+++ b/gallery.html
@@ -16,8 +16,8 @@
         <nav class="page-header__nav c-menu page_style">
 
             <a class="page-header__logo c-link" href="index.html"><img class="logo__img image-fluid" src="img/logo_new.png"
-                                                     alt="royal hotel"
-                                                     width="242" height="66"></a>
+                                                                       alt="royal hotel"
+                                                                       width="242" height="66"></a>
 
 
             <input type="checkbox" id="page-burger" class="c-menu__burger-toggle">
@@ -26,11 +26,12 @@
                 <li class="c-menu__item"><a class="c-link" href="#">Explore</a></li>
                 <li class="c-menu__item"><a class="c-link c-menu__btn" href="#">Rooms</a>
                     <ul class="c-menu-dropdown page_style">
+                        <li class="c-menu-dropdown__item page_style"><a href="rooms.html" class="c-link">Overview</a></li>
                         <li class="c-menu-dropdown__item page_style"><a href="" class="c-link">Guest rooms</a></li>
                         <li class="c-menu-dropdown__item page_style"><a href="" class="c-link">Suites</a></li>
                     </ul>
                 </li>
-                <li class="c-menu__item"><a class="c-link" href="#">Booking</a></li>
+                <li class="c-menu__item"><a class="c-link" href="booking.html">Booking</a></li>
                 <li class="c-menu__item"><a class="c-link" href="#">News</a></li>
                 <li class="c-menu__item"><a class="c-link s-active">Gallery</a></li>
                 <li class="c-menu__item"><a class="c-link" href="contacts.html">Contacts</a></li>
