--- a/booking.html
+++ b/booking.html
@@ -2,63 +2,87 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>hotel contacts</title>
+    <title>Booking</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body class="page">
 
+</body>
 <header class="page-header page_style">
     <div class="page-header__inner">
         <nav class="page-header__nav c-menu page_style">
 
-            <a class="page-header__logo c-link" href="index.html">
-                <img class="logo__img image-fluid" src="img/logo_new.png" alt="royal hotel" width="242" height="66">
-            </a>
+            <a class="page-header__logo c-link" href="index.html"><img class="logo__img image-fluid"
+                                                                       src="img/logo_new.png"
+                                                                       alt="royal hotel"
+                                                                       width="242" height="66"></a>
+
+
             <input type="checkbox" id="page-burger" class="c-menu__burger-toggle">
             <label for="page-burger" class="c-menu__burger-btn"></label>
             <ul class="menu__list">
                 <li class="c-menu__item"><a class="c-link" href="#">Explore</a></li>
-                <li class="c-menu__item"><a class="c-link c-menu__btn" href="#">Rooms</a>
+                <li class="c-menu__item"><a class="c-link  c-menu__btn" href="#">Rooms</a>
                     <ul class="c-menu-dropdown page_style">
-                        <li class="c-menu-dropdown__item page_style"><a href="rooms.html" class="c-link">Overview</a></li>
                         <li class="c-menu-dropdown__item page_style"><a href="" class="c-link">Guest rooms</a></li>
                         <li class="c-menu-dropdown__item page_style"><a href="" class="c-link">Suites</a></li>
                     </ul>
                 </li>
-                <li class="c-menu__item"><a class="c-link" href="booking.html">Booking</a></li>
+                <li class="c-menu__item"><a class="c-link s-active">Booking</a></li>
                 <li class="c-menu__item"><a class="c-link" href="#">News</a></li>
                 <li class="c-menu__item"><a class="c-link" href="gallery.html">Gallery</a></li>
-                <li class="c-menu__item"><a class="c-link s-active">Contacts</a></li>
+                <li class="c-menu__item"><a class="c-link" href="contacts.html">Contacts</a></li>
             </ul>
         </nav>
     </div>
 </header>
 <main class="page__inner">
     <div class="promo">
-        <h1>Contacts</h1>
+        <h1>Booking</h1>
     </div>
-    <div id="map"></div>
 
-    <section class="contacts container">
-
-            <h2>Get in touch with us now!</h2>
-            <span>Feel free to contact us and get more information</span>
-            <form class="response-form" action="#" method="post">
-                <div class="form-col_half">
-                    <label for="customer-name">Your name</label>
-                    <input type="text" name="name" id="customer-name" placeholder="customer" required></div>
-                <div class="form-col_half">
-                    <label for="customer-email">Your Email</label>
-                    <input type="email" name="email" id="customer-email" placeholder="example@example.com" required>
-                </div>
-                <label for="customer-msg">Your message</label>
-                <textarea name="message" id="customer-msg"  rows="20"></textarea>
-                <input type="submit" value="Submit">
-            </form>
+    <section class="booking container">
+        <form class="booking-form" action="#" method="post">
+            <div class="form-col_third">
+                <label for="guestName">Your Name</label>
+                <input type="text" id="guestName" name="guestName">
+            </div>
+            <div class="form-col_third">
+                <label for="guestEmail">Your Email</label>
+                <input type="email" id="guestEmail" name="guestEmail">
+            </div>
+            <div class="form-col_third">
+                <label for="guestNum">Number of Guests</label>
+                <select id="guestNum" name="guestNum" required>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+            </div>
+            <div class="form-col_third">
+                <label for="fromDate">Check In Date</label>
+                <input type="text" id="fromDate" name="fromDate">
+            </div>
+            <div class="form-col_third">
+                <label for="toDate">Check Out Date</label>
+                <input type="text" id="toDate" name="toDate">
+            </div>
+            <div class="form-col_third">
+                <label for="roomType">Select Room</label>
+                <select id="roomType" name="roomType" required>
+                    <option>Single</option>
+                    <option>Double</option>
+                    <option>Deluxe</option>
+                </select>
+            </div>
+            <input type="submit" value="send">
+        </form>
     </section>
 </main>
 <footer class="page-footer">
@@ -111,10 +135,7 @@
 
 </footer>
 <script src="js/menu.js"></script>
-<script src="js/map.js"></script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTmHY3DAaeDuWO3SPWS0fY7BANr1tyEx0&callback=initMap">
-</script>
-<script src="js/p-contacts.js"></script>
-</body>
+<script src="js/jquery-1.12.4.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/p-booking.js"></script>
 </html>
