--- a/booking.html
+++ b/booking.html
@@ -135,7 +135,7 @@
 
 </footer>
 <script src="js/menu.js"></script>
-<script src="js/jquery-1.12.4.js"></script>
-<script src="js/jquery-ui.js"></script>
+<script src="js/jquery-1.12.4.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
 <script src="js/p-booking.js"></script>
 </html>
