JQuery/UI for local presentation of my project

--- a/rooms.html
+++ b/rooms.html
@@ -43,7 +43,7 @@
         <h1>Rooms</h1>
     </div>
 
-    <section class="rooms-overview></section>
+    <section class="rooms-overview"></section>
 </main>
 <footer class="page-footer">
     <div class="page-footer__inner container">
