added news page with pagination

--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
                     </ul>
                 </li>
                 <li class="c-menu__item"><a class="c-link" href="booking.html">Booking</a></li>
-                <li class="c-menu__item"><a class="c-link" href="#">News</a></li>
+                <li class="c-menu__item"><a class="c-link" href="news.html">News</a></li>
                 <li class="c-menu__item"><a class="c-link" href="gallery.html">Gallery</a></li>
                 <li class="c-menu__item"><a class="c-link s-active">Contacts</a></li>
             </ul>
