--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
                     </ul>
                 </li>
                 <li class="c-menu__item"><a class="c-link" href="booking.html">Booking</a></li>
-                <li class="c-menu__item"><a class="c-link" href="#">News</a></li>
+                <li class="c-menu__item"><a class="c-link" href="news.html">News</a></li>
                 <li class="c-menu__item"><a class="c-link s-active">Gallery</a></li>
                 <li class="c-menu__item"><a class="c-link" href="contacts.html">Contacts</a></li>
             </ul>
