--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <li class="c-menu__item"><a class="c-link c-menu__btn" href="#">Rooms</a>
                     <ul class="c-menu-dropdown page_style">
                         <li class="c-menu-dropdown__item page_style"><a href="rooms.html" class="c-link">Overview</a></li>
-                        <li class="c-menu-dropdown__item page_style"><a href="" class="c-link">Guest rooms</a></li>
-                        <li class="c-menu-dropdown__item page_style"><a href="" class="c-link">Suites</a></li>
+                        <li class="c-menu-dropdown__item page_style"><a href="#" class="c-link">Guest rooms</a></li>
+                        <li class="c-menu-dropdown__item page_style"><a href="#" class="c-link">Suites</a></li>
                     </ul>
                 </li>
                 <li class="c-menu__item"><a class="c-link" href="booking.html">Booking</a></li>
-                <li class="c-menu__item"><a class="c-link" href="#">News</a></li>
+                <li class="c-menu__item"><a class="c-link" href="news.html">News</a></li>
                 <li class="c-menu__item"><a class="c-link" href="gallery.html">Gallery</a></li>
                 <li class="c-menu__item"><a class="c-link" href="contacts.html">Contacts</a></li>
             </ul>
