--- a/rooms.html
+++ b/rooms.html
@@ -31,7 +31,7 @@
                     </ul>
                 </li>
                 <li class="c-menu__item"><a class="c-link" href="#">Booking</a></li>
-                <li class="c-menu__item"><a class="c-link" href="#">News</a></li>
+                <li class="c-menu__item"><a class="c-link" href="news.html">News</a></li>
                 <li class="c-menu__item"><a class="c-link" href="gallery.html">Gallery</a></li>
                 <li class="c-menu__item"><a class="c-link" href="contacts.html">Contacts</a></li>
             </ul>
